[gd_scene load_steps=4 format=3 uid="uid://cg8bq6n8k4oec"]

[ext_resource type="Script" path="res://HUD&Menu/Menu/Options/audio_slider_settings.gd" id="1_uderw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w08s2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pd06c"]

[node name="AudioSliderSettings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uderw")
bus_name = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 21

[node name="AudioName" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 15)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Master Volume
"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_w08s2")

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 16)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.001

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_pd06c")

[node name="AudioNumber" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 15)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100"

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
